<resources>
    <string name="app_name">My Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="noInternetConection">No Internet Conection!!</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Profile Name</string>
    <string name="email">email</string>
    <string name="update">Update</string>
    <string name="task_name">Task Name</string>
    <string name="defalt_date_time">dd-mmm-yyy,hh:mm:ss</string>
    <string name="defalt">Default</string>
    <string name="header">Header</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="title_activity_add_edit_task">AddEditTaskActivity</string>
    <string name="what_is_to_be_done">What is to be done</string>
    <string name="enter_task_here">Enter Task Here</string>
    <string name="due_date">Due Date</string>
    <string name="date_not_set">Date not set</string>
    <string name="time">Time</string>
    <string name="time_not_set">Time not set</string>
    <string name="add_to_list">Add to List</string>
    <string name="save">Save</string>
    <string name="task_list">My Tasks</string>
    <string name="create_new_task">Create new Task</string>
    <string name="update_task">Update Task</string>
    <string name="task_name_exist">Task Name Exsist</string>
    <string name="user_profile">UserProfile</string>
    <string name="task">Tasks</string>
</resources>
