<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.fragment.AddEditTaskFragment"
    android:paddingHorizontal="@dimen/add_edit_task_content_padding"
    android:paddingBottom="@dimen/add_edit_task_content_paddingBottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/btnSave"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/add_edit_task_content_paddingTop"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_to_be_done"/>

        <EditText
            android:id="@+id/edttxtTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task_here"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/add_edit_task_content_paddingTop"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"/>

        <EditText
            android:id="@+id/edttxtDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_not_set"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/add_edit_task_content_paddingTop"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>

        <EditText
            android:id="@+id/edttxtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_not_set"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/add_edit_task_content_paddingTop"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_list"/>

        <Spinner
            android:id="@+id/spnrType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:text="@string/save"/>

</RelativeLayout>