<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/fment_profile_img_marginTop"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/imgProfile"
        android:layout_above="@+id/btnUpdate"
        android:layout_marginTop="@dimen/fment_profile_inputContainer_marginTop"
        android:paddingHorizontal="@dimen/fment_profile_paddingHorizontal">


        <EditText
            android:id="@+id/txtProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fment_profile_input_marginTop"
            android:hint="@string/profile_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fment_profile_input_marginTop"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>




    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        />


</RelativeLayout>