<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="15"
        android:paddingVertical="@dimen/item_task_container_paddingVertical"
        android:paddingHorizontal="@dimen/item_task_container_paddingHorizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="14">

            <TextView
                android:id="@+id/txtTaskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAllCaps="false"
                android:text="@string/task_name"
                />

            <TextView
                android:id="@+id/txtTaskType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:textAllCaps="false"
                android:text="@string/defalt"
                />

            <TextView
                android:id="@+id/txtTaskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:textAllCaps="false"
                android:text="@string/defalt_date_time"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>